[package]
name = "cookies"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.12", default-features = false, features = ["cookies", "secure-cookies"] }
actix-web-flash-messages = { path = "../../actix-web-flash-messages", features = ["cookies"] }