[package]
name = "session-redis"
version = "0.1.0"
edition = "2018"
publish = false

[package.metadata.release]
disable-release = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.9", default-features = false, features = ["cookies", "secure-cookies"] }
actix-web-flash-messages = { path = "../..", features = ["sessions"] }
actix-session = { version = "0.5.0-beta.2", default-features = false }
actix-redis = { version = "0.10.0-beta.2" }